# two_libs

./: CMakeLists.txt  two_libs-config-version.cmake.in  two_libs-config.cmake.in
add_nums/: CMakeLists.txt  add_nums.c  add_nums.h
better_atoi/: CMakeLists.txt  better_atoi.c  better_atoi.h
incr_num/: CMakeLists.txt  incr_num.h
mult_nums/: CMakeLists.txt  mult_nums.c  mult_nums.h
