add_library(mult_nums mult_nums.c)
target_include_directories(mult_nums PRIVATE ${ADD_NUMS_INCLUDE_DIRS})
target_link_libraries(mult_nums add_nums)
install(TARGETS mult_nums EXPORT mult_nums-targets DESTINATION lib)
install(FILES mult_nums.h DESTINATION include)
install(EXPORT mult_nums-targets DESTINATION lib/two_libs)
